commiting samples into git

--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,223 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="/lib/drools5/antlr-runtime-3.1.3.jar"/>
+	<classpathentry kind="lib" path="/lib/drools5/drools-api-5.1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/drools5/drools-compiler-5.1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/drools5/drools-core-5.1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/drools5/mvel2-2.0.16.jar"/>
+	<classpathentry kind="lib" path="/lib/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/activemq-camel-5.4.2.jar"/>
+	<classpathentry kind="lib" path="/lib/activemq-console-5.4.2.jar"/>
+	<classpathentry kind="lib" path="/lib/activemq-core-5.4.2.jar"/>
+	<classpathentry kind="lib" path="/lib/activemq-jaas-5.4.2.jar"/>
+	<classpathentry kind="lib" path="/lib/activemq-pool-5.4.2.jar"/>
+	<classpathentry kind="lib" path="/lib/activemq-protobuf-1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/activemq-web-5.4.2.jar"/>
+	<classpathentry kind="lib" path="/lib/annotations-api.jar"/>
+	<classpathentry kind="lib" path="/lib/ant-1.7.1.jar"/>
+	<classpathentry kind="lib" path="/lib/ant-launcher-1.7.1.jar"/>
+	<classpathentry kind="lib" path="/lib/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="/lib/antlr-runtime-3.0.jar"/>
+	<classpathentry kind="lib" path="/lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="/lib/asm-3.3.jar"/>
+	<classpathentry kind="lib" path="/lib/aspectjrt-1.6.10.jar"/>
+	<classpathentry kind="lib" path="/lib/aspectjweaver-1.6.10.jar"/>
+	<classpathentry kind="lib" path="/lib/backport-util-concurrent.jar"/>
+	<classpathentry kind="lib" path="/lib/catalina-ant.jar"/>
+	<classpathentry kind="lib" path="/lib/catalina-ha.jar"/>
+	<classpathentry kind="lib" path="/lib/catalina-tribes.jar"/>
+	<classpathentry kind="lib" path="/lib/catalina.jar"/>
+	<classpathentry kind="lib" path="/lib/cfgatewayadapter.jar"/>
+	<classpathentry kind="lib" path="/lib/cglib-2.2.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-beanutils.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-collections.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-configuration-1.9.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-csv-20070730.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-dbcp-1.4.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-el-1.0.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-email-1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-management-1.0.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-math-2.1.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-net-1.4.1.jar"/>
+	<classpathentry kind="lib" path="/lib/commons-pool-1.5.5.jar"/>
+	<classpathentry kind="lib" path="/lib/concurrent.jar"/>
+	<classpathentry kind="lib" path="/lib/cxf-2.3.2.jar"/>
+	<classpathentry kind="lib" path="/lib/dao-1.0.0.jar"/>
+	<classpathentry kind="lib" path="/lib/dao-hibernate-1.0.0.jar"/>
+	<classpathentry kind="lib" path="/lib/dom4j.jar"/>
+	<classpathentry kind="lib" path="/lib/dpHibernate1.0.17.jar"/>
+	<classpathentry kind="lib" path="/lib/ecj-3.7.1.jar"/>
+	<classpathentry kind="lib" path="/lib/ehcache-core-ee-2.4.6.jar"/>
+	<classpathentry kind="lib" path="/lib/ehcache-spring-annotations-1.2.0.jar"/>
+	<classpathentry kind="lib" path="/lib/ehcache-terracotta-ee-2.4.6.jar"/>
+	<classpathentry kind="lib" path="/lib/el-api.jar"/>
+	<classpathentry kind="lib" path="/lib/flex-messaging-common.jar"/>
+	<classpathentry kind="lib" path="/lib/flex-messaging-core.jar"/>
+	<classpathentry kind="lib" path="/lib/flex-messaging-opt.jar"/>
+	<classpathentry kind="lib" path="/lib/flex-messaging-proxy.jar"/>
+	<classpathentry kind="lib" path="/lib/flex-messaging-remoting.jar"/>
+	<classpathentry kind="lib" path="/lib/ftp4j-1.6.jar"/>
+	<classpathentry kind="lib" path="/lib/geronimo-activation_1.1_spec-1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/geronimo-annotation_1.0_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/geronimo-j2ee-management_1.1_spec-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/lib/geronimo-javamail_1.4_spec-1.7.1.jar"/>
+	<classpathentry kind="lib" path="/lib/geronimo-jaxws_2.2_spec-1.0.jar"/>
+	<classpathentry kind="lib" path="/lib/geronimo-jms_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/geronimo-jpa_2.0_spec-1.0.jar"/>
+	<classpathentry kind="lib" path="/lib/geronimo-jta_1.0.1B_spec-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/lib/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/lib/geronimo-ws-metadata_2.0_spec-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/lib/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="/lib/guava-11.0.1.jar"/>
+	<classpathentry kind="lib" path="/lib/guava-r09-jarjar.jar"/>
+	<classpathentry kind="lib" path="/lib/hadoop-core-0.20.2-cdh3u4.jar"/>
+	<classpathentry kind="lib" path="/lib/hbase-0.90.0-tests.jar"/>
+	<classpathentry kind="lib" path="/lib/hbase-0.90.6-cdh3u4.jar"/>
+	<classpathentry kind="lib" path="/lib/hibernate-commons-annotations.jar"/>
+	<classpathentry kind="lib" path="/lib/hibernate-core.jar"/>
+	<classpathentry kind="lib" path="/lib/hibernate-jpa-2.0-api.jar"/>
+	<classpathentry kind="lib" path="/lib/hibernate-validator.jar"/>
+	<classpathentry kind="lib" path="/lib/hornetq-bootstrap.jar"/>
+	<classpathentry kind="lib" path="/lib/hornetq-core-client.jar"/>
+	<classpathentry kind="lib" path="/lib/hornetq-core.jar"/>
+	<classpathentry kind="lib" path="/lib/hornetq-jboss-as-integration.jar"/>
+	<classpathentry kind="lib" path="/lib/hornetq-jms-client.jar"/>
+	<classpathentry kind="lib" path="/lib/hornetq-jms.jar"/>
+	<classpathentry kind="lib" path="/lib/hornetq-logging.jar"/>
+	<classpathentry kind="lib" path="/lib/hsqldb-1.8.0.10.jar"/>
+	<classpathentry kind="lib" path="/lib/httpclient-4.2.jar"/>
+	<classpathentry kind="lib" path="/lib/httpcore-4.2.jar"/>
+	<classpathentry kind="lib" path="/lib/httpunit.jar"/>
+	<classpathentry kind="lib" path="/lib/jackson-core-asl-1.5.5.jar"/>
+	<classpathentry kind="lib" path="/lib/jackson-jaxrs-1.5.5.jar"/>
+	<classpathentry kind="lib" path="/lib/jackson-mapper-asl-1.4.2.jar"/>
+	<classpathentry kind="lib" path="/lib/jackson-xc-1.5.5.jar"/>
+	<classpathentry kind="lib" path="/lib/jamod-1.2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/lib/janino-2.5.15.jar"/>
+	<classpathentry kind="lib" path="/lib/jasper-el.jar"/>
+	<classpathentry kind="lib" path="/lib/jasper.jar"/>
+	<classpathentry kind="lib" path="/lib/javassist-3.12.0.GA.jar"/>
+	<classpathentry kind="lib" path="/lib/javassist.jar"/>
+	<classpathentry kind="lib" path="/lib/jaxb-api-2.2.1.jar"/>
+	<classpathentry kind="lib" path="/lib/jaxb-impl-2.2.1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/jcommon-1.0.17.jar"/>
+	<classpathentry kind="lib" path="/lib/jdo-api-3.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/lib/jersey-core-1.4.jar"/>
+	<classpathentry kind="lib" path="/lib/jersey-json-1.4.jar"/>
+	<classpathentry kind="lib" path="/lib/jersey-server-1.4.jar"/>
+	<classpathentry kind="lib" path="/lib/jets3t-0.7.1.jar"/>
+	<classpathentry kind="lib" path="/lib/jettison-1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/jetty-6.1.26.jar"/>
+	<classpathentry kind="lib" path="/lib/jetty-continuation-7.2.0.v20101020.jar"/>
+	<classpathentry kind="lib" path="/lib/jetty-http-7.2.0.v20101020.jar"/>
+	<classpathentry kind="lib" path="/lib/jetty-io-7.2.0.v20101020.jar"/>
+	<classpathentry kind="lib" path="/lib/jetty-server-7.2.0.v20101020.jar"/>
+	<classpathentry kind="lib" path="/lib/jetty-util-6.1.26.jar"/>
+	<classpathentry kind="lib" path="/lib/jetty-util-7.2.0.v20101020.jar"/>
+	<classpathentry kind="lib" path="/lib/jfreechart-1.0.14.jar"/>
+	<classpathentry kind="lib" path="/lib/jline-0.9.94.jar"/>
+	<classpathentry kind="lib" path="/lib/joda-time-2.1.jar"/>
+	<classpathentry kind="lib" path="/lib/jruby-complete-1.0.3.jar"/>
+	<classpathentry kind="lib" path="/lib/js-1.6R5.jar"/>
+	<classpathentry kind="lib" path="/lib/jsch-0.1.45.jar"/>
+	<classpathentry kind="lib" path="/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="/lib/jsr311-api-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="/lib/junit-4.8.2.jar"/>
+	<classpathentry kind="lib" path="/lib/kfs-0.3.jar"/>
+	<classpathentry kind="lib" path="/lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="/lib/lucene-core-3.1.0.jar"/>
+	<classpathentry kind="lib" path="/lib/mail-1.4.jar"/>
+	<classpathentry kind="lib" path="/lib/mockito-all-1.8.5.jar"/>
+	<classpathentry kind="lib" path="/lib/mvel.jar"/>
+	<classpathentry kind="lib" path="/lib/mysql-connector-java-5.1.20.jar"/>
+	<classpathentry kind="lib" path="/lib/neethi-2.0.4.jar"/>
+	<classpathentry kind="lib" path="/lib/netty.jar"/>
+	<classpathentry kind="lib" path="/lib/objenesis-1.2.jar"/>
+	<classpathentry kind="lib" path="/lib/opencsv-2.2.jar"/>
+	<classpathentry kind="lib" path="/lib/org.eclipse.jdt.core_3.2.0.v_671.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.aop-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.asm-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.aspects-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.beans-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.context-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.context.support-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.core-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.expression-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.flex-1.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.instrument-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.instrument.tomcat-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.jdbc-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.jms-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.orm-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.oxm-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.test-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.transaction-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.web-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.web.portlet-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.web.servlet-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/org.springframework.web.struts-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="/lib/paranamer-2.2.jar"/>
+	<classpathentry kind="lib" path="/lib/paranamer-ant-2.2.jar"/>
+	<classpathentry kind="lib" path="/lib/paranamer-generator-2.2.jar"/>
+	<classpathentry kind="lib" path="/lib/poi-3.7-20101029.jar"/>
+	<classpathentry kind="lib" path="/lib/powermock-mockito-1.3.9-full.jar"/>
+	<classpathentry kind="lib" path="/lib/protobuf-java-2.3.0.jar"/>
+	<classpathentry kind="lib" path="/lib/qdox-1.10.1.jar"/>
+	<classpathentry kind="lib" path="/lib/quartz-1.6.5.jar"/>
+	<classpathentry kind="lib" path="/lib/quartz-jboss-1.6.0.jar"/>
+	<classpathentry kind="lib" path="/lib/saaj-api-1.3.jar"/>
+	<classpathentry kind="lib" path="/lib/saaj-impl-1.3.2.jar"/>
+	<classpathentry kind="lib" path="/lib/search-1.0.0.jar"/>
+	<classpathentry kind="lib" path="/lib/search-hibernate-1.0.0.jar"/>
+	<classpathentry kind="lib" path="/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="/lib/simple-java-mail-v2.1.jar"/>
+	<classpathentry kind="lib" path="/lib/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/lib/slf4j-log4j12-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/lib/spiffy-all-0.05.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-integration-core-2.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-integration-file-2.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-integration-ftp-2.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-integration-sftp-2.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-integration-xml-2.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-security-acl-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-security-aspects-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-security-cas-client-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-security-config-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-security-core-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-security-ldap-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-security-openid-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-security-taglibs-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/spring-security-web-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/standard.jar"/>
+	<classpathentry kind="lib" path="/lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/lib/stax2-api-3.0.2.jar"/>
+	<classpathentry kind="lib" path="/lib/SuperCSV-1.52.jar"/>
+	<classpathentry kind="lib" path="/lib/terracotta-toolkit-1.3-runtime-ee-3.3.0.jar"/>
+	<classpathentry kind="lib" path="/lib/thrift-0.2.0.jar"/>
+	<classpathentry kind="lib" path="/lib/tomcat-api.jar"/>
+	<classpathentry kind="lib" path="/lib/tomcat-coyote.jar"/>
+	<classpathentry kind="lib" path="/lib/tomcat-dbcp.jar"/>
+	<classpathentry kind="lib" path="/lib/tomcat-i18n-es.jar"/>
+	<classpathentry kind="lib" path="/lib/tomcat-i18n-fr.jar"/>
+	<classpathentry kind="lib" path="/lib/tomcat-i18n-ja.jar"/>
+	<classpathentry kind="lib" path="/lib/tomcat-util.jar"/>
+	<classpathentry kind="lib" path="/lib/velocity-1.7.jar"/>
+	<classpathentry kind="lib" path="/lib/woodstox-core-asl-4.0.8.jar"/>
+	<classpathentry kind="lib" path="/lib/wsdl4j-1.6.2.jar"/>
+	<classpathentry kind="lib" path="/lib/xalan-2.7.0.jar"/>
+	<classpathentry kind="lib" path="/lib/xbean-spring-3.7.jar"/>
+	<classpathentry kind="lib" path="/lib/xml-resolver-1.2.jar"/>
+	<classpathentry kind="lib" path="/lib/xmlenc-0.52.jar"/>
+	<classpathentry kind="lib" path="/lib/XmlSchema-1.4.7.jar"/>
+	<classpathentry kind="lib" path="/lib/zookeeper-3.3.2.jar"/>
+	<classpathentry kind="lib" path="/home/gubs/Downloads/sqljdbc/sqljdbc_2.0/enu/sqljdbc4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
