--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,7 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/lib/drools5/antlr-runtime-3.1.3.jar"/>
-	<classpathentry kind="lib" path="/lib/drools5/drools-api-5.1.1.jar"/>
-	<classpathentry kind="lib" path="/lib/drools5/drools-compiler-5.1.1.jar"/>
-	<classpathentry kind="lib" path="/lib/drools5/drools-core-5.1.1.jar"/>
-	<classpathentry kind="lib" path="/lib/drools5/mvel2-2.0.16.jar"/>
+	<classpathentry kind="lib" path="lib/guava-11.0.1.jar"/>
 	<classpathentry kind="lib" path="/lib/activation-1.1.jar"/>
 	<classpathentry kind="lib" path="/lib/activemq-camel-5.4.2.jar"/>
 	<classpathentry kind="lib" path="/lib/activemq-console-5.4.2.jar"/>
@@ -49,11 +45,14 @@
 	<classpathentry kind="lib" path="/lib/commons-net-1.4.1.jar"/>
 	<classpathentry kind="lib" path="/lib/commons-pool-1.5.5.jar"/>
 	<classpathentry kind="lib" path="/lib/concurrent.jar"/>
+	<classpathentry kind="lib" path="/lib/cxf-2.7.10.jar"/>
+	<classpathentry kind="lib" path="/lib/cxf-rt-rs-security-cors-2.6.1.jar"/>
 	<classpathentry kind="lib" path="/lib/dao-1.0.0.jar"/>
 	<classpathentry kind="lib" path="/lib/dao-hibernate-1.0.0.jar"/>
 	<classpathentry kind="lib" path="/lib/dom4j.jar"/>
 	<classpathentry kind="lib" path="/lib/dpHibernate1.0.17.jar"/>
 	<classpathentry kind="lib" path="/lib/ecj-3.7.1.jar"/>
+	<classpathentry kind="lib" path="/lib/ehcache-service-client-1.0.0.jar"/>
 	<classpathentry kind="lib" path="/lib/el-api.jar"/>
 	<classpathentry kind="lib" path="/lib/flex-messaging-common.jar"/>
 	<classpathentry kind="lib" path="/lib/flex-messaging-core.jar"/>
@@ -72,8 +71,6 @@
 	<classpathentry kind="lib" path="/lib/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
 	<classpathentry kind="lib" path="/lib/geronimo-ws-metadata_2.0_spec-1.1.3.jar"/>
 	<classpathentry kind="lib" path="/lib/gson-2.2.2.jar"/>
-	<classpathentry kind="lib" path="/lib/guava-11.0.1.jar"/>
-	<classpathentry kind="lib" path="/lib/guava-r09-jarjar.jar"/>
 	<classpathentry kind="lib" path="/lib/hadoop-core-0.20.2-cdh3u4.jar"/>
 	<classpathentry kind="lib" path="/lib/hbase-0.90.0-tests.jar"/>
 	<classpathentry kind="lib" path="/lib/hbase-0.90.6-cdh3u4.jar"/>
@@ -92,16 +89,16 @@
 	<classpathentry kind="lib" path="/lib/httpclient-4.2.jar"/>
 	<classpathentry kind="lib" path="/lib/httpcore-4.2.jar"/>
 	<classpathentry kind="lib" path="/lib/httpunit.jar"/>
-	<classpathentry kind="lib" path="/lib/jackson-core-asl-1.5.5.jar"/>
 	<classpathentry kind="lib" path="/lib/jackson-jaxrs-1.5.5.jar"/>
-	<classpathentry kind="lib" path="/lib/jackson-mapper-asl-1.4.2.jar"/>
 	<classpathentry kind="lib" path="/lib/jackson-xc-1.5.5.jar"/>
 	<classpathentry kind="lib" path="/lib/jamod-1.2-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="/lib/janino-2.5.15.jar"/>
 	<classpathentry kind="lib" path="/lib/jasper-el.jar"/>
 	<classpathentry kind="lib" path="/lib/jasper.jar"/>
+	<classpathentry kind="lib" path="/lib/java-json.jar"/>
 	<classpathentry kind="lib" path="/lib/javassist-3.12.0.GA.jar"/>
 	<classpathentry kind="lib" path="/lib/javassist.jar"/>
+	<classpathentry kind="lib" path="/lib/javax.ws.rs-api-2.0-m10.jar"/>
 	<classpathentry kind="lib" path="/lib/jaxb-api-2.2.1.jar"/>
 	<classpathentry kind="lib" path="/lib/jaxb-impl-2.2.1.1.jar"/>
 	<classpathentry kind="lib" path="/lib/jcommon-1.0.17.jar"/>
@@ -135,6 +132,7 @@
 	<classpathentry kind="lib" path="/lib/mockito-all-1.8.5.jar"/>
 	<classpathentry kind="lib" path="/lib/mvel.jar"/>
 	<classpathentry kind="lib" path="/lib/mysql-connector-java-5.1.20.jar"/>
+	<classpathentry kind="lib" path="/lib/neethi-3.0.3.jar"/>
 	<classpathentry kind="lib" path="/lib/netty.jar"/>
 	<classpathentry kind="lib" path="/lib/objenesis-1.2.jar"/>
 	<classpathentry kind="lib" path="/lib/opencsv-2.2.jar"/>
@@ -193,6 +191,7 @@
 	<classpathentry kind="lib" path="/lib/spring-security-openid-3.0.5.RELEASE.jar"/>
 	<classpathentry kind="lib" path="/lib/spring-security-taglibs-3.0.5.RELEASE.jar"/>
 	<classpathentry kind="lib" path="/lib/spring-security-web-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="/lib/sqljdbc4.jar"/>
 	<classpathentry kind="lib" path="/lib/standard.jar"/>
 	<classpathentry kind="lib" path="/lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="/lib/stax2-api-3.0.2.jar"/>
@@ -214,5 +213,23 @@
 	<classpathentry kind="lib" path="/lib/xmlenc-0.52.jar"/>
 	<classpathentry kind="lib" path="/lib/XmlSchema-1.4.7.jar"/>
 	<classpathentry kind="lib" path="/lib/zookeeper-3.3.2.jar"/>
+	<classpathentry kind="lib" path="/lib/drools5/drools-api-5.1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/drools5/drools-compiler-5.1.1.jar"/>
+	<classpathentry kind="lib" path="/lib/drools5/drools-core-5.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/axis.jar"/>
+	<classpathentry kind="lib" path="lib/apache-xml-xerces.jar"/>
+	<classpathentry kind="lib" path="lib/axis-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections.jar"/>
+	<classpathentry kind="lib" path="lib/commons-discovery-0.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="lib/csvjdbc-1.0-19.jar"/>
+	<classpathentry kind="lib" path="lib/drools-api-5.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/drools-compiler-5.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/drools-core-5.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jaxrpc.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.20.jar"/>
+	<classpathentry kind="lib" path="lib/saaj.jar"/>
+	<classpathentry kind="lib" path="lib/SuperCSV-1.52.jar"/>
+	<classpathentry kind="lib" path="lib/wsdl4j.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
