Updating log4j with more appenders

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,23 +1,33 @@
-# Root logger option
-log4j.rootLogger=DEBUG,stdout
+# Define the root logger with appender console, file and DB
+log4j.rootLogger=DEBUG,console,FILE,DB
 
 
-# Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{6}:%L - %m%n
+#  Define the console appender
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Target=System.out
 
-# Direct log messages to a log file
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=gubsError.log
-log4j.appender.file.MaxFileSize=100MB
-log4j.appender.file.MaxBackupIndex=20
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %5p %c{6}:%L - %m%n
+# Define the layout for console appender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{6}:%L - %m%n
+
+# Define the file appender. RollingFileAppender inherits FileAppender properties
+log4j.appender.FILE=org.apache.log4j.RollingFileAppender
+log4j.appender.FILE.File=/home/gubs/gubsError.log
+log4j.appender.FILE.MaxFileSize=10MB
+log4j.appender.FILE.MaxBackupIndex=2
+
+# Set the threshold to error mode for file
+log4j.appender.FILE.Threshold=error
+
+# Define the layout for file appender
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %5p %c{6}:%L - %m%n
 
 
+# http://www.tutorialspoint.com/log4j/log4j_logging_database.htm
 
+
+# Filters, ObjectRenderer on root logger
 log4j.logger.org.springframework=ERROR
 log4j.logger.org.springframework.jms=ERROR
 log4j.logger.org.apache.activemq=ERROR
