Updating DB and Email Features on log4j approach. Filter

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -25,7 +25,42 @@ log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %5p %c{
 
 
 # http://www.tutorialspoint.com/log4j/log4j_logging_database.htm
+# Define the DB appender
+log4j.appender.DB=org.apache.log4j.jdbc.JDBCAppender
 
+# Set JDBC URL
+log4j.appender.DB.URL=jdbc:mysql://localhost/best_bidding
+
+# Set Database Driver
+log4j.appender.DB.driver=com.mysql.jdbc.Driver
+
+# Set database user name and password
+log4j.appender.DB.user=root
+log4j.appender.DB.password=mysql
+
+# Define the layout for file appender
+log4j.appender.DB.layout=org.apache.log4j.PatternLayout
+
+# Set the SQL statement to be executed.
+log4j.appender.DB.sql=INSERT INTO LOGS VALUES('%x','%d{yyyy-MM-dd}','%C','%p','%m');
+log4j.appender.DB.Threshold=error
+
+# http://magnus-k-karlsson.blogspot.com/2010/02/sending-log-errors-with-log4j-and.html
+
+# Logger using Email (Filter is mandatory for SMTPAppender constructor)
+#log4j.logger.com.gubs.basicJava.JavaBasics=ERROR, SMTP_TLS
+ 
+#log4j.appender.SMTP_TLS.layout=org.apache.log4j.SimpleLayout
+#log4j.appender.SMTP_TLS=org.apache.log4j.net.SMTPAppender
+# the maximum number of logging events to collect in a cyclic buffer
+#log4j.appender.SMTP_TLS.BufferSize=1
+#log4j.appender.SMTP_TLS.From=support.intelliview@petrasolar.com
+#log4j.appender.SMTP_TLS.LocationInfo=true
+#log4j.appender.SMTP_TLS.SMTPDebug=true
+#log4j.appender.SMTP_TLS.SMTPHost=192.168.168.43
+#log4j.appender.SMTP_TLS.Subject=System Alert TLS
+#log4j.appender.SMTP_TLS.To=gubs4u@gmail.com
+#log4j.appender.SMTP_TLS.Cc=gubs@jeanmartin.com
 
 # Filters, ObjectRenderer on root logger
 log4j.logger.org.springframework=ERROR
