Updating HTTPPost method and URL method test to bring the data

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,3 +1,5 @@
+#Note: Pass the log4j in JAVA_OPTS by overwriting log4j having inside jar, war multiple location by env variable -Dlog4j.configuration=file:/appl/petrasolar/monitor/conf/log4j.properties
+
 # Define the root logger with appender console, file and DB
 log4j.rootLogger=DEBUG,console,FILE,DB
 
@@ -8,6 +10,7 @@ log4j.appender.console.Target=System.out
 
 # Define the layout for console appender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
+# p -> packageName, c -> className, L -> lineNumber n->nextline
 log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{6}:%L - %m%n
 
 # Define the file appender. RollingFileAppender inherits FileAppender properties
