Updating basics changes

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,5 @@
-#Note: Pass the log4j in JAVA_OPTS by overwriting log4j having inside jar, war multiple location by env variable -Dlog4j.configuration=file:/appl/petrasolar/monitor/conf/log4j.properties
+#Note: Pass the log4j in JAVA_OPTS by overwriting log4j having inside jar, war multiple location by env variable 
+#-Dlog4j.configuration=file:/appl/petrasolar/monitor/conf/log4j.properties
 
 # Define the root logger with appender console, file and DB
 log4j.rootLogger=DEBUG,console,FILE,DB
@@ -10,7 +11,7 @@ log4j.appender.console.Target=System.out
 
 # Define the layout for console appender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-# p -> packageName, c -> className, L -> lineNumber n->nextline
+# c -> className %c{1} prints only child className, L -> lineNumber n->nextline
 log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{6}:%L - %m%n
 
 # Define the file appender. RollingFileAppender inherits FileAppender properties
@@ -57,9 +58,8 @@ log4j.appender.DB.Threshold=error
 #log4j.appender.SMTP_TLS=org.apache.log4j.net.SMTPAppender
 # the maximum number of logging events to collect in a cyclic buffer
 #log4j.appender.SMTP_TLS.BufferSize=1
+#log4j.appender.SMTP_TLS.EvaluatorClass=com.petrasolar.nms.monitor.manager.impl.SftpProcessorManagerImpl
 #log4j.appender.SMTP_TLS.From=support.intelliview@petrasolar.com
-#log4j.appender.SMTP_TLS.LocationInfo=true
-#log4j.appender.SMTP_TLS.SMTPDebug=true
 #log4j.appender.SMTP_TLS.SMTPHost=192.168.168.43
 #log4j.appender.SMTP_TLS.Subject=System Alert TLS
 #log4j.appender.SMTP_TLS.To=gubs4u@gmail.com
